fix(Image): Align center

--- a/src/components/image/Image.css
+++ b/src/components/image/Image.css
@@ -1,4 +1,6 @@
 .ax-image {
   display: block;
   max-width: 100%;
+  margin-right: auto;
+  margin-left: auto;
 }
