--- a/src/components/image/ImageCircle.css
+++ b/src/components/image/ImageCircle.css
@@ -1,6 +1,8 @@
 .ax-image-circle {
   display: block;
   position: relative;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .ax-image-circle__image {
